# traph

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py
python/: MANIFEST.in  demo.py  setup.py
python/pytraph/: __init__.py
python/pytraph/client/: session.py
python/pytraph/core/: __init__.py  dtype.py  tensor.py  traph_tensor.py
python/pytraph/framework/: constant.py
traph/: CMakeLists.txt
traph/contrib/: CMakeLists.txt
traph/include/traph/cltensor/: clcontext.h  cldevice.h  clplatform.h  cltensor.h  context.h  device.h  platform.h
traph/include/traph/core/: arithmetic.h  index.h  log.h  openblas_backend.h  operation.h  slice.h  tensor.h  tensor_storage.h  type.h  utils.h  variable.h  view.h
traph/include/traph/core/framework/: op.h  tensor.h  type.h
traph/include/traph/cutensor/: cucontext.h  cudevice.h  cutensor.h
traph/include/traph/nn/: arithmetic.h  autograd.h  executor.h  function.h  grad_fn.h  graph.h  module.h  operation.h  optim.h  parameter.h  variable.h
traph/include/traph/nn/layers/: linear.h  loss.h
traph/include/traph/tensor/: arithmetic.h  byte_tensor.h  char_tensor.h  double_tensor.h  float_tensor.h  index.h  int_tensor.h  long_tensor.h  short_tensor.h  slice.h  sparse_tensor.h  tensor.h  tensor_storage.h  utils.h  view.h
traph/include/traph/test/: tensor.h
traph/install/: .gitignore  CMakeLists.txt
traph/source/: CMakeLists.txt
traph/source/cltensor/: CMakeLists.txt
traph/source/core/: CMakeLists.txt  arithmetic.cpp  log.cpp  operation.cpp  slice.cpp  tensor.cpp
traph/source/core/framework/: op.cpp
traph/source/cutensor/: CMakeLists.txt
traph/source/cutensor/cuda/: CMakeLists.txt
traph/source/demo/: CMakeLists.txt  main.cpp
traph/source/interface/: CMakeLists.txt  traph_tensor.i
traph/source/nn/: CMakeLists.txt  executor.cpp  operation.cpp  variable.cpp
traph/source/tensor/: CMakeLists.txt  arithmetic.cpp  byte_tensor.cpp  char_tensor.cpp  double_tensor.cpp  float_tensor.cpp  int_tensor.cpp  long_tensor.cpp  short_tensor.cpp  tensor.cpp
traph/source/test/: CMakeLists.txt  main.cpp
