INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/traph/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/traph/contrib)

if(Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
endif()

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(tensor)
if(ENABLE_OPENCL)
    ADD_SUBDIRECTORY(cltensor)
endif()
if(ENABLE_CUDA)
    ADD_SUBDIRECTORY(cutensor)
endif()
ADD_SUBDIRECTORY(nn)
ADD_SUBDIRECTORY(interface)


ADD_SUBDIRECTORY(test)