INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/traph/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/traph/contrib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/traph/install/include)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(tensor)
if(ENABLE_OPENCL)
    ADD_SUBDIRECTORY(cltensor)
endif()
if(ENABLE_CUDA)
    ADD_SUBDIRECTORY(cutensor)
endif()
ADD_SUBDIRECTORY(nn)
ADD_SUBDIRECTORY(interface)


ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(demo)