SET(LIB_NAME core)
SET(LIB_OUTNAME traph-${LIB_NAME})

SET(HEADER_PATH ${TRAPH_PATH_HEADER}/${LIB_NAME})
SET(SOURCE_PATH ${TRAPH_PATH_SOURCE}/${LIB_NAME})

SET(CORE_LIST
	${HEADER_PATH}/utils.h
	${HEADER_PATH}/slice.h
	${HEADER_PATH}/index.h
	${HEADER_PATH}/type.h
	${HEADER_PATH}/log.h
	${SOURCE_PATH}/log.cpp
	${HEADER_PATH}/tensor.h
	${HEADER_PATH}/variable.h
)

ADD_LIBRARY(${LIB_OUTNAME} ${CORE_LIST})




